# tiptop

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
src/tiptop/: __init__.py  _app.py  _battery.py  _cpu.py  _disk.py  _helpers.py  _info.py  _mem.py  _net.py  _procs_list.py  blockchar_stream.py  braille_stream.py  main.py
src/xtop/: main.py
tests/: test_streams.py
