[metadata]
name = tiptop
version = 0.0.18
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = A better top
url = https://github.com/nschloe/tiptop
project_urls =
    Code=https://github.com/nschloe/tiptop
    Issues=https://github.com/nschloe/tiptop/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    py-cpuinfo
    distro
    psutil
    rich >= 11.0.0
    textual >=0.1, <0.2
python_requires = >=3.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    tiptop = tiptop._app:run
